2007-05-04 Ian Rutt
 * Fixed bug in GLINT output: After rejigging GLINT timestepping, output was only 
   possible at GLIDE time-steps, due to separation of time variables between the two. 
   Overcame this by building extra code to handle instantaneous glint variables; this
   can be accessed using [GLINT output] section in config file.
 * Added functionality to turn off writing glide output using optional argument (this
   facilitates GLINT output timing)

2007-05-01 Ian Rutt
 * Discovered that there was inadequate precision in the single-precision
   version of glimmer for the calculation of fractional locations in the
   interpolation code (glint_interp.F90, subroutine calc_fractional). Promoted all
   internal variables in this subroutine to double-precision. 

2007-04-30 Ian Rutt
 * Fixed bugs that prevented single-precision compilation

2007-04-27 Ian Rutt
 * configure.in: bump version to 1.0.3

2007-04-27 Ian Rutt
 * configure.in: bump version to 1.0.2
 * NEWS: update

2007-04-27 Ian Rutt
 * Fixed bugs in anomaly coupling, and tested
 * Added ability to specify whether temperatures in glint_example climate
   are in Kelvin or not.

2007-04-23 Ian Rutt
 * Merged changes from RELEASE_1_0_0_ANOMALY into RELEASE_1_0_0_BRANCH

2007-04-13 Ian Rutt
 * Added integer parameter to glimmer_version to enable run-time testing of
   glimmer version number (1.2.5 -> 10205, for example)

2007-04-04 Ian Rutt
 * Plumbed anomaly coupling into Glint

2007-04-02 Ian Rutt
 * Further work on anomaly coupling. Added to build.
 * Fixed bugs - tested and seems to work

2007-03-27 Ian Rutt
 * Fixed bug with make_restarts.py so that output line-length is kept
   reasonable - build with gfortran fails otherwise.
 * Branched to RELEASE_1_0_0_ANOMALY
 * Began assembling code for anomaly coupling - added glimmer_anomcouple.F90
	
2007-03-16 Ian Rutt
 * Fixed problem specifying sigma levels - all three methods work now

2007-02-23 Ian Rutt
 * configure.in: bump version to 1.0.1